--- a/Scala.JarenEnSeizoenen.WPF/MainWindow.xaml
+++ b/Scala.JarenEnSeizoenen.WPF/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Prb.JarenEnSeizoenen.WPF.MainWindow"
+﻿<Window x:Class="Scala.JarenEnSeizoenen.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prb.JarenEnSeizoenen.WPF"
+        xmlns:local="clr-namespace:Scala.JarenEnSeizoenen.WPF"
         mc:Ignorable="d"
        Title="Jaren en Seizoenen" Height="270.666" Width="542" Loaded="Window_Loaded">
     <Grid>
